# summarybot-ng

./: .credentials.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/security/: audit-status.json
.claude/agent-overrides/: _example.yaml
.claude/docs/: v3-agents-index.md
.claude/guidance/: constitution.md
.claude/helpers/: brain-checkpoint.cjs  statusline-v3.cjs  statusline.cjs
.claude/hooks/: README.txt  cross-phase-memory.yaml  v3-domain-workers.json
.claude/skills/: README.md
.devcontainer/: devcontainer.json  devcontainer.json+
.github/workflows/: ci.yml
data/: config.json  summarybot.db-shm
docs/: ADR-101-rolling-period-summaries.md  PRD-rewrite-appendix-endpoints.md  PRD-rewrite.md  TESTING_AUTH_BYPASS.md  V3-IMPLEMENTATION-GUIDE.md  platform-support.md  ruvector-knowledge-system.md  slack-integration.md  slack-setup.md  technical-debt.md  v1-legacy-requirements.md  v2-rebuild-plan.md
docs/adr/: 001-whatsapp-conversation-reader-bot.md  002-whatsapp-datasource-integration-summarybotng.md  (+115 more)
scripts/: .ui-auth.json  deploy.sh  migrate_encrypt_secrets.py  migrate_whatsapp_pii.py  regenerate_summary.py  ruvector_demo_migration.py  ruvector_migrate_page.py  scrub_pii.py  start_test_server.py  ui-driver.js
src/: __main__.py  container.py  main.py
tests/: conftest.py  test_data_example.py  test_regeneration_e2e.py
(+910 files in other folders)
