[tool.poetry]
name = "summarybot-ng"
version = "1.0.0"
description = "An intelligent Discord bot that generates comprehensive summaries of conversations using AI-powered analysis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = ">=2.3.0"
anthropic = ">=0.5.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.0"
aiosqlite = ">=0.19.0"
redis = ">=5.0.0"
apscheduler = ">=3.10.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
python-multipart = ">=0.0.6"
aiohttp = ">=3.9.0"
html2text = ">=2020.1.16"
pyyaml = "^6.0.3"
cryptography = ">=42.0.0,<47.0.0"
aiosmtplib = ">=3.0.0,<4.0.0"
Jinja2 = ">=3.1.0"
google-auth = ">=2.0.0"  # ADR-049: Google Workspace SSO

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.7.0"
httpx = ">=0.25.0"
sqlalchemy = "^2.0.45"
psutil = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"